modules/ui/styles/mw.cx.ui.TranslationView.less
@import "../../widgets/common/ext.cx.common";
@import "../../widgets/common/ext.cx.column";

.cx-column--source,
.cx-column--translation {
	.mw-ui-one-half(@palm);

	.cx-column__content {
		// Make sure that the captions are aligned according to the column's language
		// rather than the wiki's content language
		&[dir="rtl"] figcaption {
			/* @noflip */
			text-align: right;
		}

		&[dir="ltr"] figcaption {
			/* @noflip */
			text-align: left;
		}

		& > p,
		& > pre,
		& > div,
		& > ul {
			// Use margin-bottom alone for paragraphs to avoid problems explained at
			// https://css-tricks.com/what-you-should-know-about-collapsing-margins/
			// TLDR: a neighbour margin-bottom will affect actual margin-top by overlap.
			margin: 0 0 1.5em;
		}
	}
}

.cx-column--tools {
	.mw-ui-one-whole(@palm);

	background: #f0f0f0;
	min-height: 100vh;
	position: relative;
	z-index: 20;
	border-left: 1px solid #ccc;

	&.sticky {
		.stick-to-side;
		@media @palm {
			.stick-to-bottom;
		}
	}
	@media @palm {
		.stick-to-bottom;
	}
}

.suggestion {
	.mw-ui-item;
	.mw-ui-one-half(@palm);

	background: white;
	border: 1px solid #cccccc;
	padding: 10px;
	margin: 2px 0;
}

.cx-header__publish {
	.mw-ui-item;
	.mw-ui-one-third;
	float: right;
}

